refactor(#4): 커스텀 에러 수정

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ out/
 ### .yml ###
 /**/main/resources/application-local.yml
 /**/main/resources/application-prod.yml
+
+### .DS_Store ###
+.DS_Store
