feature(#8): 리뷰 생성 및 조회 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     active: local
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:starbucks.sql
 
   datasource:
     url: ${spring.datasource.url}
