feat(#18): badge 도메인 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,9 @@ spring:
   sql:
     init:
       mode: always
-      data-locations: classpath:starbucks.sql
+      data-locations:
+        - classpath:starbucks.sql
+        - classpath:badge.sql
 
   datasource:
     url: ${spring.datasource.url}
